Fix order z-index and change image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,7 +224,7 @@
   -ms-animation: headerNotifyGrowth ease-in 0.2s;
   will-change: opacity, transform;
   display: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__notify::before {
